--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,10 @@ kotlin = "2.2.10"
 android-minSdk = "24"
 android-compileSdk = "36"
 vanniktechMavenPublish = "0.34.0"
+equinox = "1.1.6"
 
 [libraries]
+equinox-core = { module = "io.github.n7ghtm4r3:equinox-core", version.ref = "equinox" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
