--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,15 @@
 [versions]
 agp = "8.11.1"
-kotlin = "2.2.10"
+kotlin = "2.2.20"
 android-minSdk = "24"
 android-compileSdk = "36"
 vanniktechMavenPublish = "0.34.0"
 startup = "1.2.0"
 equinox = "1.1.6"
-kotlin-browser = "0.3.1"
+kotlin-browser = "0.5.0"
 keyring = "1.0.4"
 json = "1.9.0"
+kotlinx-coroutines = "1.10.2"
 
 [libraries]
 startup = { module = "androidx.startup:startup-runtime", version.ref = "startup" }
@@ -16,6 +17,8 @@ equinox-core = { module = "io.github.n7ghtm4r3:equinox-core", version.ref = "equ
 kotlin-browser = { module = "org.jetbrains.kotlinx:kotlinx-browser", version.ref = "kotlin-browser" }
 keyring = { module = "com.github.javakeyring:java-keyring", version.ref = "keyring" }
 json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "json" }
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
