--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ kotlin-browser = "0.5.0"
 keyring = "1.0.4"
 json = "1.9.0"
 kotlinx-coroutines = "1.10.2"
+krypto = "6.0.1"
 
 [libraries]
 startup = { module = "androidx.startup:startup-runtime", version.ref = "startup" }
@@ -19,6 +20,7 @@ keyring = { module = "com.github.javakeyring:java-keyring", version.ref = "keyri
 json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "json" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
+krypto = { module = "com.soywiz:korlibs-crypto", version.ref = "krypto" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
