--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ keyring = "1.0.4"
 json = "1.9.0"
 kotlinx-coroutines = "1.10.2"
 krypto = "6.0.1"
+windpapi4j = "2.2.0"
 
 [libraries]
 startup = { module = "androidx.startup:startup-runtime", version.ref = "startup" }
@@ -21,6 +22,7 @@ json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.re
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 krypto = { module = "com.soywiz:korlibs-crypto", version.ref = "krypto" }
+windpapi4j = { module = "com.github.peter-gergely-horvath:windpapi4j", version.ref = "windpapi4j" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
