--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ plugins:
 
 nav:
   - Overview: index.md
+  - Advice: advice.md
   - Secure Storage: secure_storage.md
   - Services:
       - Overview: services/index.md
