Working on code documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,10 @@ nav:
   - Secure Storage: secure_storage.md
   - Services:
       - Overview: services/index.md
-      - Symmetric: services/symmetric.md
+      - Symmetric:
+          - Overview: services/symmetric/symmetric.md
+          - AES: services/symmetric/aes.md
+          - HMAC: services/symmetric/hmac.md
       - Asymmetric: services/asymmetric.md
 
 extra:
