--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-agp = "8.12.3"
-kotlin = "2.2.21"
-android-minSdk = "24"
+agp = "9.0.0"
+kotlin = "2.3.0"
 android-compileSdk = "36"
-vanniktechMavenPublish = "0.34.0"
+android-minSdk = "24"
+mavenPublish = "0.36.0"
+dokka = "2.1.0"
 startup = "1.2.0"
-equinox = "1.1.7"
+equinox = "1.1.9beta-01"
 kotlin-browser = "0.5.0"
 keyring = "1.0.4"
-json = "1.9.0"
+json = "1.10.0"
 kotlinx-coroutines = "1.10.2"
 windpapi4j = "2.2.0"
-dokka = "2.0.0"
 
 [libraries]
 startup = { module = "androidx.startup:startup-runtime", version.ref = "startup" }
@@ -22,10 +22,12 @@ json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.re
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-swing = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 windpapi4j = { module = "com.github.peter-gergely-horvath:windpapi4j", version.ref = "windpapi4j" }
-dokka-base = { module = "org.jetbrains.dokka:dokka-base", version.ref = "dokka" }
 
 [plugins]
+androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "vanniktechMavenPublish" }
+androidKotlinMultiplatformLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish" }
